force-app/main/default/objects/LeanData__Scheduled_Routing_Job__c/LeanData__Scheduled_Routing_Job__c.object-meta.xml
<CustomObject>
    <label>Scheduled Routing Job</label>
    <nameField>
        <label>Scheduled_Routing_Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Routing Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>