force-app/main/default/objects/LeanData__Scheduled_Routing_Job__c/fields/LeanData__Node_Type__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Node_Type__c</fullName>
    <label>Node Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>