force-app/main/default/objects/LeanData__Scheduled_Routing_Job__c/fields/LeanData__Run_Type__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Run_Type__c</fullName>
    <label>Run Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>