force-app/main/default/objects/LeanData__Scheduled_Routing_Job__c/fields/LeanData__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>